HW2 except word count done

--- a/Classes/1.SparkBasic/4. Word Count_HW.ipynb
+++ b/Classes/1.SparkBasic/4. Word Count_HW.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -269,24 +269,47 @@
    },
    "outputs": [],
    "source": [
+    "#I'm adding a helper function to compute k-mers:\n",
+    "import re\n",
+    "from string import lower,strip\n",
+    "\n",
+    "def compute_kmers(input_list, k):\n",
+    "    kmers = []\n",
+    "    words  = [w for w in re.split(r'\\W+',input_list) if len(w)>0]\n",
+    "    for i in range(0,len(words)-(k-1)):\n",
+    "            temp = ''\n",
+    "            for j in range(0,k):\n",
+    "                temp = temp+words[i+j]\n",
+    "                #temp = temp+' '\n",
+    "            temp = strip(temp)\n",
+    "            kmers.append(temp)\n",
+    "            \n",
+    "    return kmers\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "\n",
     "def map_kmers(text,k):\n",
     "    # text: an RDD of text lines. Lines contain only lower-case letters and spaces. Spaces should be ignored.\n",
     "    # k: length of `k`-mers\n",
-    "    return  singles\n",
+    "    return  text.flatMap(lambda x: compute_kmers(x,k)).map(lambda x: (x,1))\n",
+    "    #return  singles\n",
     "    # singles: an RDD of pairs of the form (tuple of k words,1)\n",
+    "    \n",
+    "    \n",
     "def count_kmers(singles):\n",
     "    # singles: as above\n",
-    "    return count\n",
+    "    return singles.reduceByKey(lambda x,y:x+y)\n",
     "    # count: RDD of the form: (tuple of k words, number of occurances)\n",
     "def sort_counts(count):\n",
     "    # count: as above\n",
-    "    return sorted_count\n",
+    "    return count.map(lambda (x,y): (y,x)).sortByKey(False)\n",
     "    # sorted_counts: RDD of the form (number of occurances, tuple of k words) sorted in decreasing number of"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -331,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -349,7 +372,15 @@
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Invalid switch - \"..\".\n"
+     ]
+    }
+   ],
    "source": [
     "# First, check that the text file is where we expect it to be\n",
     "%ls -l ../../Data/Moby-Dick.txt"
@@ -357,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -382,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -400,7 +431,20 @@
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "most common 2-mers\n",
+      "1796:\tofthe\n",
+      "1145:\tinthe\n",
+      "708:\ttothe\n",
+      "408:\tfromthe\n",
+      "376:\tthewhale\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the output of the aggregate function for top 5 2-mers\n",
     "getkmers(text_file,5,2, map_kmers, count_kmers, sort_counts)"
@@ -408,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -427,7 +471,30 @@
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correct Output: [(91, (u'of', u'the', u'whale')), (91, (u'the', u'sperm', u'whale')), (76, (u'the', u'white', u'whale')), (55, (u'one', u'of', u'the')), (54, (u'of', u'the', u'sea'))]\n",
+      "\n",
+      "Error: Function returned incorrect output\n",
+      "Your Output:  [(91, u'thespermwhale'), (91, u'ofthewhale'), (76, u'thewhitewhale'), (55, u'oneofthe'), (54, u'ofthesea')]\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "Your Answer is Incorrect",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-36-2f960e215751>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mTester\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mWordCount\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mWordCount\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mWordCount\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexercise\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpickleFile\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmap_kmers\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcount_kmers\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msort_counts\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32mC:\\Users\\User\\Desktop\\CSE255-DSE230\\Classes\\1.SparkBasic\\Tester\\WordCount.py\u001b[0m in \u001b[0;36mexercise\u001b[0;34m(pickleFile, map_kmers, count_kmers, sort_counts, sc)\u001b[0m\n\u001b[1;32m     30\u001b[0m     \u001b[0mfunc_student\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mlambda\u001b[0m \u001b[0mRDD\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mgetkmers\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mRDD\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmap_kmers\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcount_kmers\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msort_counts\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m     \u001b[0mnoError\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mTestRDDK\u001b[0m\u001b[1;33m(\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtext_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfunc_student\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfunc_student\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcorAns\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcase\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcorType\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcase\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtakeK\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtoPrint\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 32\u001b[0;31m     \u001b[1;32mif\u001b[0m \u001b[0mnoError\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mFalse\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;32mraise\u001b[0m \u001b[0mAssertionError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Your Answer is Incorrect'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     33\u001b[0m     \u001b[1;32mprint\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: Your Answer is Incorrect"
+     ]
+    }
+   ],
    "source": [
     "import Tester.WordCount as WordCount\n",
     "WordCount.exercise(pickleFile, map_kmers, count_kmers, sort_counts, sc)"
@@ -477,7 +544,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.13"
   },
   "toc": {
    "colors": {
