--- a/Classes/0.MemoryLatency/01_SimpleCount.ipynb
+++ b/Classes/0.MemoryLatency/01_SimpleCount.ipynb
@@ -745,9 +745,9 @@
   "anaconda-cloud": {},
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python [conda env:cse255]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "conda-env-cse255-py"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
