--- a/Classes/1.SparkBasic/1. Spark Basics 1_HW.ipynb
+++ b/Classes/1.SparkBasic/1. Spark Basics 1_HW.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -234,12 +234,13 @@
     "# Modify this cell\n",
     "def mapcos(A):\n",
     "    # Write code that will perform the task outlined in exercise 1\n",
-    "    return \"returns a spark RDD\""
+    "    B = A.map(lambda x: np.cos(x))\n",
+    "    return B"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -268,23 +269,16 @@
      "text": [
       "Input: [0, 1, 2]\n",
       "Correct Output: [1.0, 0.54030230586813977, -0.41614683654714241]\n",
+      "Great Job!\n",
       "\n",
-      "Error: Function returned incorrect output\n",
-      "Your Output:  [0.0, 0.8414709848078965, 0.90929742682568171]\n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "Your Answer is Incorrect",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-87609e7ced50>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mTester\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSparkBasics1\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mSparkBasics1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mSparkBasics1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexercise1_1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpickleFile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmapcos\u001b[0m \u001b[0;34m,\u001b[0m\u001b[0msc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/home/ubuntu/edX-Micro-Master-in-Data-Science/big-data-analytics-using-spark/notebooks/1.BasicSpark/Tester/SparkBasics1.pyc\u001b[0m in \u001b[0;36mexercise1_1\u001b[0;34m(pickleFile, func_student, sc)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mexercise1_1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpickleFile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfunc_student\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mcheckExerciseFromPickle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpickleFile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfunc_student\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mTestRDD\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'ex1_1'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mexercise1_2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpickleFile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfunc_student\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mcheckExerciseFromPickle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpickleFile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfunc_student\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mTestRDDStr\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'ex1_2'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/ubuntu/edX-Micro-Master-in-Data-Science/big-data-analytics-using-spark/notebooks/1.BasicSpark/Tester/Tester.pyc\u001b[0m in \u001b[0;36mcheckExerciseFromPickle\u001b[0;34m(pickleFile, func_student, TestFunction, exerciseNumber, sc, twoInputs)\u001b[0m\n\u001b[1;32m    160\u001b[0m     \u001b[0minputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mexerciseNumber\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'inputs'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    161\u001b[0m     \u001b[0moutputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mexerciseNumber\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'outputs'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 162\u001b[0;31m     \u001b[0mcheckExercise\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfunc_student\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mTestFunction\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexerciseNumber\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtwoInputs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtwoInputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    163\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    164\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/ubuntu/edX-Micro-Master-in-Data-Science/big-data-analytics-using-spark/notebooks/1.BasicSpark/Tester/Tester.pyc\u001b[0m in \u001b[0;36mcheckExercise\u001b[0;34m(inputs, outputs, func_student, TestFunction, exerciseNumber, sc, twoInputs)\u001b[0m\n\u001b[1;32m    153\u001b[0m             \u001b[0minput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparallelize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    154\u001b[0m         \u001b[0mnoError\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mTestFunction\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfunc_student\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfunc_student\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcorAns\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcase\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcorType\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcase\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m  \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 155\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mnoError\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mFalse\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mraise\u001b[0m \u001b[0mAssertionError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Your Answer is Incorrect'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    156\u001b[0m         \u001b[0;32mprint\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    157\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: Your Answer is Incorrect"
+      "Input: [4, 5, 6, 7, 8, 9, 10, 11]\n",
+      "Correct Output: [-0.65364362086361194, 0.28366218546322625, 0.96017028665036597, 0.7539022543433046, -0.14550003380861354, -0.91113026188467694, -0.83907152907645244, 0.0044256979880507854]\n",
+      "Great Job!\n",
+      "\n",
+      "Input: [-4, -3, -2, -1]\n",
+      "Correct Output: [-0.65364362086361194, -0.98999249660044542, -0.41614683654714241, 0.54030230586813977]\n",
+      "Great Job!\n",
+      "\n"
      ]
     }
    ],
@@ -331,9 +325,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true,
     "run_control": {
@@ -349,12 +343,14 @@
     "# Modify this cell\n",
     "def mapwords(stringRDD):\n",
     "    # Write code that will perform the task outlined in exercise 2\n",
-    "    return \"return spark RDD, so to get a list run: mapwords(stringRDD).collect() \""
+    "    l = stringRDD.map(lambda x : x.split(\" \")).filter(lambda n: n != [])\n",
+    "    #return \"return spark RDD, so to get a list run: mapwords(stringRDD).collect() \"\n",
+    "    return l"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -376,7 +372,26 @@
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input: ['Spring quarter', 'Learning spark basics', 'Big data analytics with Spark']\n",
+      "Correct Output: [['Spring', 'quarter'], ['Learning', 'spark', 'basics'], ['Big', 'data', 'analytics', 'with', 'Spark']]\n",
+      "Great Job!\n",
+      "\n",
+      "Input: ['Do not go gentle', 'into that good night', 'old age should burn and rave']\n",
+      "Correct Output: [['Do', 'not', 'go', 'gentle'], ['into', 'that', 'good', 'night'], ['old', 'age', 'should', 'burn', 'and', 'rave']]\n",
+      "Great Job!\n",
+      "\n",
+      "Input: ['do', 'I dare disturb', 'the universe', 'there will be time there will be', 'time']\n",
+      "Correct Output: [['do'], ['I', 'dare', 'disturb'], ['the', 'universe'], ['there', 'will', 'be', 'time', 'there', 'will', 'be'], ['time']]\n",
+      "Great Job!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import Tester.SparkBasics1 as SparkBasics1\n",
     "SparkBasics1.exercise1_2(pickleFile, mapwords, sc)"
@@ -420,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -438,12 +453,14 @@
     "# Modify this cell\n",
     "def getMax(C):\n",
     "    # Write the code that will perform the task outlined in exercise 3\n",
-    "    return \"return spark NUMBER here, example, to get a number run mapwords(C)\""
+    "    maximum = C.reduce(lambda x,y: x if x>y else y)\n",
+    "    #return \"return spark NUMBER here, example, to get a number run mapwords(C)\"\n",
+    "    return maximum"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -465,7 +482,26 @@
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input: [0, 4, 2, 3, 1]\n",
+      "Correct Output: 4\n",
+      "Great Job!\n",
+      "\n",
+      "Input: [-3.2, -3.233, -3.1, -3.9]\n",
+      "Correct Output: -3.1\n",
+      "Great Job!\n",
+      "\n",
+      "Input: [2, 2, 2, 2, 2, 2]\n",
+      "Correct Output: 2\n",
+      "Great Job!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import Tester.SparkBasics1 as SparkBasics1\n",
     "SparkBasics1.exercise1_3(pickleFile, getMax, sc)"
@@ -509,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -526,12 +562,15 @@
    "source": [
     "# Modify this cell\n",
     "def reducewords(stringRDD):\n",
-    "    return \"return concatenation of all strings using spark\""
+    "    stringRDD = stringRDD.flatMap(lambda x: x.split(\" \")).filter(lambda n: n != ' ').reduce(lambda x,y: x+' '+y).strip()\n",
+    "    \n",
+    "    return stringRDD\n",
+    "    #return \"return concatenation of all strings using spark\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -553,7 +592,26 @@
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input: ['Spring quarter', 'Learning spark basics', 'Big data analytics with Spark']\n",
+      "Correct Output: Spring quarter Learning spark basics Big data analytics with Spark\n",
+      "Great Job!\n",
+      "\n",
+      "Input: ['Do not go gentle', 'into that good night', 'old age should burn and rave']\n",
+      "Correct Output: Do not go gentle into that good night old age should burn and rave\n",
+      "Great Job!\n",
+      "\n",
+      "Input: ['do', 'I dare disturb', 'the universe', 'there will be time there will be', 'time']\n",
+      "Correct Output: do I dare disturb the universe there will be time there will be time\n",
+      "Great Job!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import Tester.SparkBasics1 as SparkBasics1\n",
     "SparkBasics1.exercise1_4(pickleFile, reducewords, sc)"
@@ -599,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -618,13 +676,24 @@
     "def maxFunc(x,y):\n",
     "    # x,y are lists of numbers\n",
     "    # write code here for exercise 5\n",
+    "    l = []\n",
+    "    f = lambda x,y: x if x>y else y\n",
+    "    x_max  = reduce(f,x)\n",
+    "    y_max  = reduce(f,y)\n",
+    "    if(x_max>=y_max):\n",
+    "        l.append(x_max)\n",
+    "        return l\n",
+    "    else:\n",
+    "        l.append(y_max)\n",
+    "        return l\n",
+    "            \n",
     "    \n",
-    "    return \"returns a list to be used possibly again by the reduce command\""
+    "#return \"returns a list to be used possibly again by the reduce command\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -646,7 +715,26 @@
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input: [[15, 20], [21, 14], [18, 4, 20]]\n",
+      "Correct Output: [21]\n",
+      "Great Job!\n",
+      "\n",
+      "Input: [[3, 4, 5, -3, 19], [19.1], [7, -11]]\n",
+      "Correct Output: [19.1]\n",
+      "Great Job!\n",
+      "\n",
+      "Input: [[-3.2, -3.233, -3.9], [-4], [-3, -5]]\n",
+      "Correct Output: [-3]\n",
+      "Great Job!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import Tester.SparkBasics1 as SparkBasics1\n",
     "SparkBasics1.exercise1_5(pickleFile, maxFunc, sc)"
@@ -700,7 +788,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.13"
   },
   "toc": {
    "colors": {
