--- a/Classes/1.SparkBasic/3. Spark Basics 2_HW.ipynb
+++ b/Classes/1.SparkBasic/3. Spark Basics 2_HW.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -228,12 +228,13 @@
     "# Modify this cell\n",
     "def maxSum(A):\n",
     "    # Write code that will perform the task outlined in exercise 1\n",
-    "    return \"returns the sum of maximum numbers of all lists\""
+    "    return A.filter(lambda a: a != []).map(lambda x: max(x)).reduce(lambda x,y: x+y)\n",
+    "    #return \"returns the sum of maximum numbers of all lists\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -252,7 +253,22 @@
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input: [[3, 4], [2, 1], [7, 9]]\n",
+      "Correct Output: 15\n",
+      "Great Job!\n",
+      "\n",
+      "Input: [[3, 42, 12, 4], [6, 0, -1], [32, 31, 2, 52, 3]]\n",
+      "Correct Output: 100\n",
+      "Great Job!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import Tester.SparkBasics2 as SparkBasics2\n",
     "SparkBasics2.exercise1(pickleFile, maxSum,sc)"
@@ -295,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -310,12 +326,13 @@
     "# Modify this cell\n",
     "def positiveCos(A):\n",
     "    # Write code that will perform the task outlined in exercise 2\n",
-    "    return \"returns a spark RDD\""
+    "    return A.filter(lambda x: np.cos(x)>0)\n",
+    "#return \"returns a spark RDD\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -334,7 +351,30 @@
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input: [0, 1, 2]\n",
+      "Correct Output: [0, 1]\n",
+      "Great Job!\n",
+      "\n",
+      "Input: [4, 5, 6, 7, 8, 9, 10, 11]\n",
+      "Correct Output: [5, 6, 7, 11]\n",
+      "Great Job!\n",
+      "\n",
+      "Input: [-4, -3, -2, -1]\n",
+      "Correct Output: [-1]\n",
+      "Great Job!\n",
+      "\n",
+      "Input: [0, 2, 1]\n",
+      "Correct Output: [0, 1]\n",
+      "Great Job!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import Tester.SparkBasics2 as SparkBasics2\n",
     "SparkBasics2.exercise2(pickleFile, positiveCos,sc)"
@@ -378,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -393,12 +433,13 @@
     "# Modify this cell\n",
     "def longWords(A):\n",
     "    # Write code that will perform the task outlined in exercise 3\n",
-    "    return \"returns a spark RDD\""
+    "    return A.filter(lambda x: x!= ' ' ).filter(lambda x: len(x)>=4)\n",
+    "#return \"returns a spark RDD\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -417,7 +458,26 @@
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input: ['this', 'is', 'the', 'best', 'mac', 'ever']\n",
+      "Correct Output: ['this', 'best', 'ever']\n",
+      "Great Job!\n",
+      "\n",
+      "Input: ['Hasta', 'la', 'vista', 'baby']\n",
+      "Correct Output: ['Hasta', 'vista', 'baby']\n",
+      "Great Job!\n",
+      "\n",
+      "Input: ['A', 'long', 'time', 'ago', 'in', 'a', 'galaxy', 'far', 'far', 'away']\n",
+      "Correct Output: ['long', 'time', 'galaxy', 'away']\n",
+      "Great Job!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import Tester.SparkBasics2 as SparkBasics2\n",
     "SparkBasics2.exercise3(pickleFile, longWords,sc)"
@@ -463,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -478,12 +538,13 @@
     "# Modify this cell\n",
     "def collectRange(A):\n",
     "    # Write code that will perform the task outlined in exercise 4\n",
-    "    return \"returns a spark RDD\""
+    "    return A.flatMap(lambda x: [a for a in range(1,x+1)])\n",
+    "#return \"returns a spark RDD\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -502,7 +563,26 @@
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input: [2, 3, 5]\n",
+      "Correct Output: [1, 2, 1, 2, 3, 1, 2, 3, 4, 5]\n",
+      "Great Job!\n",
+      "\n",
+      "Input: [5, 3, 1]\n",
+      "Correct Output: [1, 2, 3, 4, 5, 1, 2, 3, 1]\n",
+      "Great Job!\n",
+      "\n",
+      "Input: [1, 2, 3, 4, 5]\n",
+      "Correct Output: [1, 1, 2, 1, 2, 3, 1, 2, 3, 4, 1, 2, 3, 4, 5]\n",
+      "Great Job!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import Tester.SparkBasics2 as SparkBasics2\n",
     "SparkBasics2.exercise4(pickleFile, collectRange,sc)"
@@ -574,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -589,12 +669,13 @@
     "# Modify this cell\n",
     "def transform1(RDD1,RDD2):\n",
     "    # Write code that will perform the task outlined in exercise 5\n",
-    "    return \"returns a spark RDD\""
+    "    return RDD1.flatMap(lambda x: x.split(\" \")).filter(lambda x: x!= ' ').union(RDD2.flatMap(lambda x: x.split(\" \")).filter(lambda x: x!= ' '))\n",
+    "#return \"returns a spark RDD\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -613,7 +694,19 @@
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input: ['spark basics', 'big data analysis', 'spring']\n",
+      "['spark using pyspark', 'big data']\n",
+      "Correct Output: ['spark', 'basics', 'big', 'data', 'analysis', 'spring', 'spark', 'using', 'pyspark', 'big', 'data']\n",
+      "Great Job!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import Tester.SparkBasics2 as SparkBasics2\n",
     "SparkBasics2.exercise5(pickleFile, transform1,sc)"
@@ -654,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -669,12 +762,14 @@
     "# Modify this cell\n",
     "def transform2(RDD1,RDD2):\n",
     "    # Write code that will perform the task outlined in exercise 6\n",
-    "    return \"returns a spark RDD\""
+    "    return RDD1.flatMap(lambda x: x.split(\" \")).filter(lambda x: x!= ' ').intersection(RDD2.flatMap(lambda x: x.split(\" \")).filter(lambda x: x!= ' '))\n",
+    "\n",
+    "#return \"returns a spark RDD\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -693,7 +788,19 @@
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input: ['spark basics', 'big data analysis', 'spring']\n",
+      "['spark using pyspark', 'big data']\n",
+      "Correct Output: ['big', 'spark', 'data']\n",
+      "Great Job!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import Tester.SparkBasics2 as SparkBasics2\n",
     "SparkBasics2.exercise6(pickleFile, transform2,sc)"
@@ -735,9 +842,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true,
     "run_control": {
@@ -750,12 +857,14 @@
     "# Modify this cell\n",
     "def transform3(RDD1,RDD2):\n",
     "    # Write code that will perform the task outlined in exercise 7\n",
-    "    return \"returns a spark RDD\""
+    "    return RDD1.flatMap(lambda x: x.split(\" \")).filter(lambda x: x!= ' ').subtract(RDD2.flatMap(lambda x: x.split(\" \")).filter(lambda x: x!= ' '))\n",
+    "\n",
+    "#return \"returns a spark RDD\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -774,7 +883,19 @@
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input: ['spark basics', 'big data analysis', 'spring']\n",
+      "['spark using pyspark', 'big data']\n",
+      "Correct Output: ['spring', 'basics', 'analysis']\n",
+      "Great Job!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import Tester.SparkBasics2 as SparkBasics2\n",
     "SparkBasics2.exercise7(pickleFile, transform3,sc)"
@@ -820,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -835,12 +956,14 @@
     "# Modify this cell\n",
     "def transform4(RDD1,RDD2):\n",
     "    # Write code that will perform the task outlined in exercise 8\n",
-    "    return \"returns a spark RDD\""
+    "    return RDD1.flatMap(lambda x: x.split(\" \")).filter(lambda x: x!= ' ').cartesian(RDD2.flatMap(lambda x: x.split(\" \")).filter(lambda x: x!= ' '))\n",
+    "\n",
+    "#return \"returns a spark RDD\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -859,7 +982,19 @@
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input: ['spark basics', 'big data analysis', 'spring']\n",
+      "['spark using pyspark', 'big data']\n",
+      "Correct Output: [('spark', 'spark'), ('spark', 'using'), ('spark', 'pyspark'), ('basics', 'spark'), ('basics', 'using'), ('basics', 'pyspark'), ('spark', 'big'), ('spark', 'data'), ('basics', 'big'), ('basics', 'data'), ('big', 'spark'), ('big', 'using'), ('big', 'pyspark'), ('data', 'spark'), ('analysis', 'spark'), ('data', 'using'), ('data', 'pyspark'), ('analysis', 'using'), ('analysis', 'pyspark'), ('big', 'big'), ('big', 'data'), ('data', 'big'), ('analysis', 'big'), ('data', 'data'), ('analysis', 'data'), ('spring', 'spark'), ('spring', 'using'), ('spring', 'pyspark'), ('spring', 'big'), ('spring', 'data')]\n",
+      "Great Job!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import Tester.SparkBasics2 as SparkBasics2\n",
     "SparkBasics2.exercise8(pickleFile, transform4,sc)"
@@ -905,7 +1040,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.13"
   },
   "toc": {
    "colors": {
