--- a/Classes/1.SparkBasic/4. Word Count_HW.ipynb
+++ b/Classes/1.SparkBasic/4. Word Count_HW.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -273,28 +273,19 @@
     "import re\n",
     "from string import lower,strip\n",
     "\n",
-    "def compute_kmers(input_list, k):\n",
+    "\n",
+    "def compute_kmers(text,k):\n",
     "    kmers = []\n",
-    "    words  = [w for w in re.split(r'\\W+',input_list) if len(w)>0]\n",
-    "    for i in range(0,len(words)-(k-1)):\n",
-    "            temp = ''\n",
-    "            for j in range(0,k):\n",
-    "                temp = temp+words[i+j]\n",
-    "                #temp = temp+' '\n",
-    "            temp = strip(temp)\n",
-    "            kmers.append(temp)\n",
-    "            \n",
-    "    return kmers\n",
-    "    \n",
+    "    words  = [w for w in re.split(r'\\W+',text) if len(w)>0]\n",
+    "    return [(tuple(words[i:i+k]),1) for i in range(len(words)-k+1)]\n",
     "    \n",
     "\n",
     "\n",
     "def map_kmers(text,k):\n",
     "    # text: an RDD of text lines. Lines contain only lower-case letters and spaces. Spaces should be ignored.\n",
     "    # k: length of `k`-mers\n",
-    "    return  text.flatMap(lambda x: compute_kmers(x,k)).map(lambda x: (x,1))\n",
-    "    #return  singles\n",
-    "    # singles: an RDD of pairs of the form (tuple of k words,1)\n",
+    "    singles= text.flatMap(lambda x:compute_kmers(x,k))\n",
+    "    return  singles\n",
     "    \n",
     "    \n",
     "def count_kmers(singles):\n",
@@ -309,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -354,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -388,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -413,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -437,11 +428,11 @@
      "output_type": "stream",
      "text": [
       "most common 2-mers\n",
-      "1796:\tofthe\n",
-      "1145:\tinthe\n",
-      "708:\ttothe\n",
-      "408:\tfromthe\n",
-      "376:\tthewhale\n"
+      "1796:\t(u'of', u'the')\n",
+      "1145:\t(u'in', u'the')\n",
+      "708:\t(u'to', u'the')\n",
+      "408:\t(u'from', u'the')\n",
+      "376:\t(u'the', u'whale')\n"
      ]
     }
    ],
@@ -452,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -477,21 +468,8 @@
      "output_type": "stream",
      "text": [
       "Correct Output: [(91, (u'of', u'the', u'whale')), (91, (u'the', u'sperm', u'whale')), (76, (u'the', u'white', u'whale')), (55, (u'one', u'of', u'the')), (54, (u'of', u'the', u'sea'))]\n",
-      "\n",
-      "Error: Function returned incorrect output\n",
-      "Your Output:  [(91, u'thespermwhale'), (91, u'ofthewhale'), (76, u'thewhitewhale'), (55, u'oneofthe'), (54, u'ofthesea')]\n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "Your Answer is Incorrect",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-36-2f960e215751>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mTester\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mWordCount\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mWordCount\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mWordCount\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexercise\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpickleFile\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmap_kmers\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcount_kmers\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msort_counts\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32mC:\\Users\\User\\Desktop\\CSE255-DSE230\\Classes\\1.SparkBasic\\Tester\\WordCount.py\u001b[0m in \u001b[0;36mexercise\u001b[0;34m(pickleFile, map_kmers, count_kmers, sort_counts, sc)\u001b[0m\n\u001b[1;32m     30\u001b[0m     \u001b[0mfunc_student\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mlambda\u001b[0m \u001b[0mRDD\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mgetkmers\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mRDD\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmap_kmers\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcount_kmers\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msort_counts\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m     \u001b[0mnoError\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mTestRDDK\u001b[0m\u001b[1;33m(\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtext_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfunc_student\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfunc_student\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcorAns\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcase\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcorType\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcase\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtakeK\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtoPrint\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 32\u001b[0;31m     \u001b[1;32mif\u001b[0m \u001b[0mnoError\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mFalse\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;32mraise\u001b[0m \u001b[0mAssertionError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Your Answer is Incorrect'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     33\u001b[0m     \u001b[1;32mprint\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: Your Answer is Incorrect"
+      "Great Job!\n",
+      "\n"
      ]
     }
    ],
