--- a/Classes/1.5.MoreSpark/6. more RDD operations_HW.ipynb
+++ b/Classes/1.5.MoreSpark/6. more RDD operations_HW.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -195,7 +195,24 @@
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python Code for getData():\n",
+      "def getData(sc):\n",
+      "    f = urllib.urlretrieve (\"http://kdd.ics.uci.edu/databases/kddcup99/kddcup.data_10_percent.gz\", \"kddcup.data_10_percent.gz\")\n",
+      "    data_file = \"./kddcup.data_10_percent.gz\"\n",
+      "    return sc.textFile(data_file)\n",
+      "\n",
+      "Number of Variables: 494021\n",
+      "\n",
+      "Variable Example:\n",
+      "[u'0,tcp,http,SF,181,5450,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,8,8,0.00,0.00,0.00,0.00,1.00,0.00,0.00,9,9,1.00,0.00,0.11,0.00,0.00,0.00,0.00,0.00,normal.']\n"
+     ]
+    }
+   ],
    "source": [
     "print \"Python Code for getData():\"\n",
     "import inspect\n",
@@ -203,7 +220,7 @@
     "    print i[:-1]\n",
     "print\n",
     "print \"Number of Variables: \"+str( data.count() )\n",
-    "print \"\\nVariable Exampe:\"\n",
+    "print \"\\nVariable Example:\"\n",
     "print data.take(1)"
    ]
   },
@@ -244,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -257,7 +274,9 @@
    "outputs": [],
    "source": [
     "# Modify this cell\n",
+    "i\n",
     "def csv_to_kv(data):\n",
+    "    KV = data.map(lambda x: x.split(\",\")).map(lambda x: (x[-1], x ) )\n",
     "    # data: an RDD of lines as defined above.\n",
     "    return KV\n",
     "    # Key-Value RDD"
@@ -265,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -284,7 +303,17 @@
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input: <class 'pyspark.rdd.RDD'>\n",
+      "Correct Output: [(u'normal.', [u'0', u'tcp', u'http', u'SF', u'181', u'5450', u'0', u'0', u'0', u'0', u'0', u'1', u'0', u'0', u'0', u'0', u'0', u'0', u'0', u'0', u'0', u'0', u'8', u'8', u'0.00', u'0.00', u'0.00', u'0.00', u'1.00', u'0.00', u'0.00', u'9', u'9', u'1.00', u'0.00', u'0.11', u'0.00', u'0.00', u'0.00', u'0.00', u'0.00', u'normal.']), (u'normal.', [u'0', u'tcp', u'http', u'SF', u'239', u'486', u'0', u'0', u'0', u'0', u'0', u'1', u'0', u'0', u'0', u'0', u'0', u'0', u'0', u'0', u'0', u'0', u'8', u'8', u'0.00', u'0.00', u'0.00', u'0.00', u'1.00', u'0.00', u'0.00', u'19', u'19', u'1.00', u'0.00', u'0.05', u'0.00', u'0.00', u'0.00', u'0.00', u'0.00', u'normal.']), (u'normal.', [u'0', u'tcp', u'http', u'SF', u'235', u'1337', u'0', u'0', u'0', u'0', u'0', u'1', u'0', u'0', u'0', u'0', u'0', u'0', u'0', u'0', u'0', u'0', u'8', u'8', u'0.00', u'0.00', u'0.00', u'0.00', u'1.00', u'0.00', u'0.00', u'29', u'29', u'1.00', u'0.00', u'0.03', u'0.00', u'0.00', u'0.00', u'0.00', u'0.00', u'normal.'])]\n",
+      "Great Job!\n"
+     ]
+    }
+   ],
    "source": [
     "import Tester.moreRDD as moreRDD\n",
     "moreRDD.exercise1(pickleFile, csv_to_kv, data ,sc)"
@@ -330,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -344,14 +373,16 @@
    "source": [
     "# Modify this cell\n",
     "def orderNet(data):\n",
-    "    RDD = csv_to_kv(data)  #<-- The correct RDD from csv_to_kv(data)\n",
-    "    sreturn orderedRDD\n",
+    "    RDD = csv_to_kv(data)#<-- The correct RDD from csv_to_kv(data)\n",
+    "    orderedRDD = RDD.map( lambda (x,y) : (x, int(y[0])) ).reduceByKey(lambda a,b: a+b).map(lambda (a,b) : (b,a)).sortByKey(False)\n",
+    "    orderedRDD = orderedRDD.map(lambda (a,b): (b,a))\n",
+    "    return orderedRDD\n",
     "    # orderedRDD: ordered tuples of the form: (interaction_type , total_duration)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -370,7 +401,17 @@
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input: <class 'pyspark.rdd.RDD'>\n",
+      "Correct Output: [(u'normal.', 21075991), (u'portsweep.', 1991911), (u'warezclient.', 627563), (u'buffer_overflow.', 2751), (u'multihop.', 1288)]\n",
+      "Great Job!\n"
+     ]
+    }
+   ],
    "source": [
     "import Tester.moreRDD as moreRDD\n",
     "moreRDD.exercise2(pickleFile, orderNet, data ,sc)"
@@ -417,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -432,14 +473,19 @@
     "# Modify this cell\n",
     "def avgDuration(data):\n",
     "    #RDD1 = csv_to_kv(data)  #<-- The correct RDD from csv_to_kv(data)\n",
-    "    #RDD2 = orderNet(data)   #<-- The correct RDD from orderNet(data)\n",
-    "    return avgRDD\n",
+    "    RDD2 = csv_to_kv(data).map( lambda (k,v): (k,int(v[0])))    #<-- The correct RDD from orderNet(data)\n",
+    "    sumCount = RDD2.combineByKey(lambda value: (value, 1.0), lambda x, value: (x[0] + value, x[1] + 1.0), lambda x, y: (x[0] + y[0], x[1] + y[1]))\n",
+    "\n",
+    "    averageByKey = sumCount.map(lambda (label, (value_sum, count)): (label, (value_sum/count)) )\n",
+    "\n",
+    "\n",
+    "    return averageByKey.sortByKey()\n",
     "    # avgRDD: sorted tuples of the form: (interaction_type , average_duration)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -458,7 +504,27 @@
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input: <class 'pyspark.rdd.RDD'>\n",
+      "Correct Output: [(u'back.', 0.1289151157512483), (u'buffer_overflow.', 91.7), (u'ftp_write.', 32.375), (u'guess_passwd.', 2.7169811320754715), (u'imap.', 6.0), (u'ipsweep.', 0.034482758620689655), (u'land.', 0.0), (u'loadmodule.', 36.22222222222222), (u'multihop.', 184.0)]\n",
+      "Great Job!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import Tester.moreRDD as moreRDD\n",
     "moreRDD.exercise3(pickleFile, avgDuration, data ,sc)"
@@ -509,7 +575,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.13"
   },
   "toc": {
    "colors": {
