--- a/Classes/1.5.MoreSpark/7.Spark SQL_HW.ipynb
+++ b/Classes/1.5.MoreSpark/7.Spark SQL_HW.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -184,7 +184,7 @@
     }
    },
    "source": [
-    "##  Exercise 1 -- Creating and transforming dataframes from JSON files\n",
+    "#  Exercise 1 -- Creating and transforming dataframes from JSON files\n",
     "\n",
     "[JSON](http://www.json.org/) is a very popular readable file format for storing structured data.\n",
     "Among it's many uses are **twitter**, `javascript` communication packets, and many others. In fact this notebook file (with the extension `.ipynb` is in json format. JSON can also be used to store tabular data and can be easily loaded into a dataframe.\n",
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -230,7 +230,11 @@
     "\n",
     "def get_country_list(json_filepath, n, sqlContext):\n",
     "    # read json file into a dataframe\n",
-    "    makes_df = None\n",
+    "    makes_df = sqlContext.read.json(json_filepath)\n",
+    "    makes_df = makes_df.filter(makes_df['make_is_common']== 1)\n",
+    "    makes_df.registerTempTable(\"makes_df\")\n",
+    "    \n",
+    "    \n",
     "    \n",
     "    # check the schema of the json file, uncomment the next line to see the schema\n",
     "    #makes_df.printSchema()\n",
@@ -241,9 +245,12 @@
     "    # |-- make_display: string (nullable = true)\n",
     "    # |-- make_id: string (nullable = true)\n",
     "    # |-- make_is_common: string (nullable = true)\n",
-    "    \n",
+    "    query = 'SELECT  make_country,COUNT(*) FROM makes_df GROUP BY make_country'    \n",
     "    country_list = []\n",
-    "    \n",
+    "    country_list = sqlContext.sql(query)\n",
+    "    #country_list.printSchema()\n",
+    "    country_list = country_list.filter(country_list['count(1)'] > n).collect()\n",
+    "    country_list = [str(x.make_country) for x in country_list]\n",
     "    # Your implementation goes here\n",
     "    \n",
     "    return country_list"
@@ -251,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -261,7 +268,16 @@
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correct Output: ['Germany', 'Italy', 'USA', 'UK', 'Japan']\n",
+      "Great Job!\n"
+     ]
+    }
+   ],
    "source": [
     "import Tester.SparkSQL as SparkSQL\n",
     "SparkSQL.exercise_1(sqlContext, pickleFile, get_country_list)"
@@ -313,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -328,7 +344,7 @@
     "# Modify this cell\n",
     "def get_top_n_country_list(parquet_path, n, sqlContext):\n",
     "    # read the parquet file\n",
-    "    makes_df = None\n",
+    "    makes_df = sqlContext.read.load(parquet_path)\n",
     "    \n",
     "    # check the schema of the parquet file, uncomment the next line to see the schema\n",
     "    #makes_df.printSchema()\n",
@@ -341,22 +357,25 @@
     "    # |-- make_is_common: string (nullable = true)\n",
     "    \n",
     "    # create a temporary table or view to manipulate and query data using SQL\n",
-    "    makes_table = None\n",
+    "    makes_df.registerTempTable(\"makes_df\")\n",
     "    \n",
     "    # write the SQL query to group rows by make_country and its count\n",
-    "    query= None\n",
-    "    \n",
+    "    query= 'SELECT make_country, count(*) as counts FROM makes_df GROUP BY make_country ORDER BY counts DESC '\n",
+    "    temp_list = []\n",
+    "    temp_list = sqlContext.sql(query)\n",
     "    # Uncomment this line to get the dataframe by running the SQL query\n",
     "    #query_result_df = sqlContext.sql(query)\n",
-    "    \n",
+    "   \n",
     "    # Your implementation to return the list of top \"n\" make_country in descending order of their count\n",
-    "    top_n_country_list = []\n",
+    "    temp_list = temp_list.select(\"make_country\",\"counts\").collect()\n",
+    "    #print temp_list\n",
+    "    top_n_country_list = temp_list[:n] \n",
     "    return top_n_country_list\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -366,7 +385,22 @@
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- make_country: string (nullable = true)\n",
+      " |-- make_display: string (nullable = true)\n",
+      " |-- make_id: string (nullable = true)\n",
+      " |-- make_is_common: string (nullable = true)\n",
+      "\n",
+      "Correct Output: [('USA', 16), ('Japan', 10), ('UK', 8)]\n",
+      "Great Job!\n"
+     ]
+    }
+   ],
    "source": [
     "import Tester.SparkSQL as SparkSQL\n",
     "SparkSQL.exercise_2(sqlContext, pickleFile, get_top_n_country_list)"
@@ -409,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -425,20 +459,20 @@
     "\n",
     "def get_city_count(csv_filepath, sqlContext):\n",
     "    # read csv file into a dataframe\n",
-    "    city_df = None\n",
+    "    city_df = sqlContext.read.csv(csv_filepath)\n",
     "    \n",
     "    # check the schema of the csv file, uncomment the next line to see the schema\n",
-    "    # city_df.printSchema()\n",
+    "    city_df.printSchema()\n",
     "    \n",
     "    # filter the df and return the count, you can do (city_df.filter('YOUR FILTER CONDITION').count())\n",
-    "    count = None\n",
-    "    \n",
+    "    count =  city_df.filter(\" _c0 LIKE '%city%' \").count()\n",
+    "    #count = []\n",
     "    return count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -448,11 +482,35 @@
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- _c0: string (nullable = true)\n",
+      " |-- _c1: string (nullable = true)\n",
+      " |-- _c2: string (nullable = true)\n",
+      " |-- _c3: string (nullable = true)\n",
+      "\n",
+      "Correct Output: 15\n",
+      "Great Job!\n"
+     ]
+    }
+   ],
    "source": [
     "import Tester.SparkSQL as SparkSQL\n",
     "SparkSQL.exercise_3(sqlContext, pickleFile, get_city_count)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -472,7 +530,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.13"
   },
   "toc": {
    "colors": {
