--- a/Classes/1.5.MoreSpark/7. Spark SQL_CLASS.ipynb
+++ b/Classes/1.5.MoreSpark/7. Spark SQL_CLASS.ipynb
@@ -456,7 +456,7 @@
      "read_only": false
     },
     "slideshow": {
-     "slide_type": "skip"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -1739,7 +1739,7 @@
   "celltoolbar": "Slideshow",
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
