--- a/Classes/2.PCA/2.Small_PCA_computation_HW.ipynb
+++ b/Classes/2.PCA/2.Small_PCA_computation_HW.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -217,8 +217,10 @@
     "    RDD=RDDin.map(lambda v:np.array(np.insert(v,0,1),dtype=np.float64)) \n",
     "    \n",
     "    # separating map and reduce does not matter, since Spark uses lazy execution.\n",
-    "    OuterRDD=RDD ...    #<-- do mapping here\n",
-    "    (S,N)=OuterRDD ...  #<-- do reducing here\n",
+    "    OuterRDD=RDD.map(lambda x: outerProduct(x))    #<-- do mapping here\n",
+    "    (S,N)=OuterRDD.reduce(lambda x,y: sumWithNan(x,y))  #<-- do reducing here\n",
+    "    \n",
+    "    \n",
     "    \n",
     "    E=S[0,1:]\n",
     "    NE=np.float64(N[0,1:])\n",
@@ -227,7 +229,7 @@
     "    O=S[1:,1:]\n",
     "    NO=np.float64(N[1:,1:])\n",
     "    \n",
-    "    Cov=  ...... # This is the covariance matrix\n",
+    "    Cov=  (O/NO) - np.outer(Mean,Mean)    # This is the covariance matrix\n",
     "    \n",
     "    # Output also the diagnal which is the variance for each day\n",
     "    Var=np.array([Cov[i,i] for i in range(Cov.shape[0])])\n",
@@ -236,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -256,7 +258,21 @@
     },
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking data_list of length 3 with length 10 vectors each having 2 np.NaN values\n",
+      "shape of E= (10L,) shape of NE= (10L,)\n",
+      "\n",
+      "Checking data_list of length 100 with length 10 vectors each having 4 np.NaN values\n",
+      "shape of E= (10L,) shape of NE= (10L,)\n",
+      "\n",
+      "Great Job!\n"
+     ]
+    }
+   ],
    "source": [
     "import Tester.SmallPCA as pca\n",
     "pca.exercise(computeCov, sc)"
@@ -309,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.13"
   },
   "name": "PCA_using_numpy for HW3",
   "notebookId": 85286,
